--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,11 @@ torch>=1.7.0
 torchvision>=0.8.1
 tqdm>=4.41.0
 
+# editing -------------------------------------
+pip install jupyterlab
+pip install ipywidgets
+
+
 # logging -------------------------------------
 tensorboard>=2.4.1
 # wandb
