--- a/requirementsNANO.txt
+++ b/requirementsNANO.txt
@@ -12,8 +12,8 @@ scipy>=1.4.1
 tqdm>=4.41.0
 
 # editing -------------------------------------
-jupyterlab
-ipywidgets
+#jupyterlab
+#ipywidgets
 
 # logging -------------------------------------
 tensorboard>=2.4.1
