--- a/requirementsNANO.txt
+++ b/requirementsNANO.txt
@@ -6,7 +6,7 @@ numpy>=1.18.5
 #opencv-python>=4.1.2
 Pillow
 PyYAML>=5.3.1
-#scipy>=1.4.1
+scipy>=1.4.1
 #torch==1.8.1+cu111
 #torchvision==0.9.1+cu111
 tqdm>=4.41.0
@@ -21,7 +21,7 @@ tqdm>=4.41.0
 
 # plotting ------------------------------------
 seaborn>=0.11.0
-#pandas
+pandas
 
 # export --------------------------------------
 # coremltools>=4.1
