--- a/requirementsNANO.txt
+++ b/requirementsNANO.txt
@@ -16,7 +16,7 @@ tqdm>=4.41.0
 #ipywidgets
 
 # logging -------------------------------------
-#tensorboard>=2.4.1
+tensorboard>=2.4.1
 # wandb
 
 # plotting ------------------------------------
