--- a/requirementsPC.txt
+++ b/requirementsPC.txt
@@ -14,6 +14,7 @@ tqdm>=4.41.0
 # editing -------------------------------------
 jupyterlab
 ipywidgets
+PyQt5
 
 # logging -------------------------------------
 tensorboard>=2.4.1
